force-app/main/default/objects/EinsteinAnalyticsEvent__e/EinsteinAnalyticsEvent__e.object-meta.xml
<CustomObject>
    <label>EinsteinAnalyticsEvent</label>
    <pluralLabel>EinsteinAnalyticsEvents</pluralLabel>
</CustomObject>