force-app/main/default/objects/EinsteinAnalyticsEvent__e/fields/payload__c.field-meta.xml
<CustomField>
    <fullName>payload__c</fullName>
    <description>The JSON payload to send to the target. For filters and selections this will be the standard EA format. For steps, refresh, etc., this will likely be specific to this POC. Refer to the source code for details and examples.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>