force-app/main/default/objects/EinsteinAnalyticsEvent__e/fields/target__c.field-meta.xml
<CustomField>
    <fullName>target__c</fullName>
    <description>One or more identifiers (IDs, names, etc.) to receive the event, comma separated.</description>
    <label>Target</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>