force-app/main/default/objects/EinsteinAnalyticsEvent__e/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>The type of the event to allow the EA assets to respond accordingly.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>